--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,4 +3,6 @@ name = "latest-eth-spec"
 version = "0.1.0"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "lru-dict>=1.3.0",
+]
